force-app/main/default/objects/Contact_Language__c/Contact_Language__c.object-meta.xml
<CustomObject>
    <description>Joins a Language and a Contact to store details about a Contact&apos;s language fluency.</description>
    <label>Contact Language</label>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>Contact Language Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Languages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>