force-app/main/default/objects/Contact_Language__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The person who speaks this language.</description>
    <inlineHelpText>The person who speaks this language.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Languages</relationshipLabel>
    <relationshipName>Contact_Languages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>