force-app/main/default/objects/Contact_Language__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A language this person speaks.</description>
    <inlineHelpText>A language this person speaks.</inlineHelpText>
    <label>Language</label>
    <referenceTo>Language__c</referenceTo>
    <relationshipLabel>Contact Languages</relationshipLabel>
    <relationshipName>Contact_Languages</relationshipName>
    <type>Lookup</type>
</CustomField>