force-app/main/default/objects/Contact_Language__c/fields/Language_Details__c.field-meta.xml
<CustomField>
    <fullName>Language_Details__c</fullName>
    <description>Additional details about this Contact&apos;s preferred language.</description>
    <label>Language Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>