force-app/main/default/objects/Contact_Language__c/fields/Primary_Language__c.field-meta.xml
<CustomField>
    <fullName>Primary_Language__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this is the language of choice for this person.</description>
    <inlineHelpText>Indicates this is the language of choice for this person.</inlineHelpText>
    <label>Primary Language</label>
    <type>Checkbox</type>
</CustomField>